# GausSED

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: conf.py  gaussed.rst  index.rst  modules.rst
gaussed/: bandpasses.py  temp.py
tests/: test_bandpasses.py  test_temp.py
