[metadata]
name = GausSED
version = 0.1.dev0
author = John Franklin Crenshaw
author_email = jfc20@uw.edu
description = 
    Deconvolving SEDs from photometry using Interdomain 
    Stochastic Variational Gaussian Processes (I-SVGP) 
long_description = file: README.md, CHANGELOG, LICENSE
long_description_content_type = text/markdown
license = MIT
classifiers = 
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python


[options]
packages = find:
install_requires =
    numpy
    tensorflow
    tensorflow-probability
    gpflow
setup_requires = pytest-runner, pylint
tests_require = pytest

[options.extras_require]
interactive = 
    matplotlib
    jupyter
    jupyterlab
