[metadata]
name = GausSED
version = attr: gaussed.__version__
author = John Franklin Crenshaw
author_email = jfc20@uw.edu
description = 
    Deconvolving SEDs from photometry using Interdomain 
    Stochastic Variational Gaussian Processes (I-SVGP) 
long_description = file: README.md, CHANGELOG, LICENSE
long_description_content_type = text/markdown
license = MIT
classifiers = 
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
python_requires = >=3.5, <3.9
install_requires =
    numpy
    tensorflow
    tensorflow-probability
    gpflow
setup_requires = pytest-runner
tests_require = pytest

[options.extras_require]
interactive = 
    matplotlib
    jupyter
    jupyterlab
